--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿aiohappyeyeballs==2.6.1
+aiohappyeyeballs==2.6.1
 aiohttp==3.12.15
 aiosignal==1.4.0
 altair==5.5.0
@@ -32,23 +32,17 @@ httpx==0.28.1
 httpx-sse==0.4.1
 idna==3.10
 Jinja2==3.1.6
-jiter==0.10.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.25.0
-jsonschema-specifications==2025.4.1
 langchain==0.3.27
 langchain-community==0.3.27
 langchain-core==0.3.74
 langchain-google-genai==2.1.9
-langchain-openai==0.3.30
-langchain-text-splitters==0.3.9
 langsmith==0.4.14
 MarkupSafe==3.0.2
 marshmallow==3.26.1
 multidict==6.6.4
-mypy_extensions==1.1.0
-narwhals==2.1.2
 nest-asyncio==1.6.0
 numpy==2.3.2
 openai==1.99.9
@@ -56,7 +50,6 @@ orjson==3.11.2
 packaging==25.0
 pandas==2.3.1
 pillow==11.3.0
-propcache==0.3.2
 proto-plus==1.26.1
 protobuf==6.32.0
 pyarrow==21.0.0
@@ -64,14 +57,12 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.11.7
 pydantic-settings==2.10.1
-pydantic_core==2.33.2
 pydeck==0.9.1
 pypdf==6.0.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
 PyYAML==6.0.2
-referencing==0.36.2
 regex==2025.7.34
 requests==2.32.4
 requests-toolbelt==1.0.0
@@ -84,13 +75,11 @@ SQLAlchemy==2.0.43
 streamlit==1.48.1
 tenacity==9.1.2
 tiktoken==0.11.0
-toml==0.10.2
-tornado==6.5.2
-tqdm==4.67.1
-typing-inspect==0.9.0
-typing-inspection==0.4.1
-typing_extensions==4.14.1
+torch==2.1.0
+sentence-transformers==2.2.2
+transformers==4.34.0
 tzdata==2025.2
+typing_extensions==4.14.1
 urllib3==2.5.0
 watchdog==6.0.0
 yarl==1.20.1
